--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- list items for pokemon -->
+    <ul class="pokemon-list"></ul>
+    <!-- new button for each pokemon in the list -->
 
     <script src="scripts.js"></script> <!-- see also async or defer attributes https://stackoverflow.com/questions/436411/where-should-i-put-script-tags-in-html-markup-->
 </body>
