--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- list items for pokemon -->
-    <ul class="pokemon-list"></ul>
-    <!-- new button for each pokemon in the list -->
-
+    <div class="modal-container"></div>
+    <div id="pokedex-container">
+        <h1>Pokedex</h1>
+        <ul class="pokedex-list"></ul>
+    </div>
+    
     <script src="scripts.js"></script> <!-- see also async or defer attributes https://stackoverflow.com/questions/436411/where-should-i-put-script-tags-in-html-markup-->
 </body>
 </html>
