--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,12 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="modal-container"></div>
-    <div id="pokedex-container">
-        <h1>Pokedex</h1>
-        <ul class="pokedex-list"></ul>
-    </div>
-    
-    <script src="scripts.js"></script> <!-- see also async or defer attributes https://stackoverflow.com/questions/436411/where-should-i-put-script-tags-in-html-markup-->
+    <div id="modal-container"></div>
+    <h1>Pokedex</h1>
+    <ul class="pokedex-list"></ul>
+    <script src="scripts.js"></script>
 </body>
+
 </html>
